syntax = "proto3";

option go_package = "./remoteProcedures";

message RegisterPeerResponse {
  Peer peer = 1;
  repeated Peer peerList = 2;
  }

message PeerList {
  repeated Peer peerList = 1;
  }

message Peer {
  int32 id = 1;
  string addr = 2;
  }

message Empty {}

service ServiceRegistry {
  rpc RegisterPeer (Peer) returns (RegisterPeerResponse);
}

service PeerFunction {
  rpc NewPeerAdded (Peer) returns (Empty);
}
